<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.AddUserActivity">

    <TextView
        android:id="@+id/tvAddUserTitle"
        style="@style/TextAppearance.AppCompat.Display2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_user_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/etFirstName"
        android:text="@string/first_name"
        app:layout_constraintBottom_toBottomOf="@+id/etFirstName"
        app:layout_constraintEnd_toStartOf="@+id/etFirstName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etFirstName" />

    <TextView
        android:id="@+id/tvLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/etLastName"
        android:text="@string/last_name"
        app:layout_constraintBottom_toBottomOf="@+id/etLastName"
        app:layout_constraintStart_toStartOf="@+id/tvFirst"
        app:layout_constraintTop_toTopOf="@+id/etLastName" />

    <TextView
        android:id="@+id/tvUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/etImageUrl"
        android:text="@string/image_url"
        app:layout_constraintBottom_toBottomOf="@+id/etImageUrl"
        app:layout_constraintStart_toStartOf="@+id/tvLast"
        app:layout_constraintTop_toTopOf="@+id/etImageUrl" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="personGivenName"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/sample_first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvFirst"
        app:layout_constraintTop_toBottomOf="@+id/tvAddUserTitle" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:autofillHints="personFamilyName"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/sample_last_name"
        app:layout_constraintEnd_toEndOf="@+id/etFirstName"
        app:layout_constraintStart_toStartOf="@+id/etFirstName"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

    <EditText
        android:id="@+id/etImageUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:text="@string/sample_image_url"
        app:layout_constraintEnd_toEndOf="@+id/etLastName"
        app:layout_constraintStart_toStartOf="@+id/etLastName"
        app:layout_constraintTop_toBottomOf="@+id/etLastName" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/etImageUrl"
        app:layout_constraintStart_toStartOf="@+id/etImageUrl"
        app:layout_constraintTop_toBottomOf="@+id/etImageUrl" />
</androidx.constraintlayout.widget.ConstraintLayout>